<resources>

    <!-- main -->
    <string name="app_name">Balance</string>
    <string name="your_message">Your message</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_message">Delete message</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <!-- notifications -->
    <string name="default_notification_channel_name" translatable="false">News</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>


    <!-- drawer -->
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="drawer_item_contact">Contacts</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="imprt">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="drawer_item_invitation">Send Invitation</string>
    <string name="settings_description">account, theme, etc</string>
    <string name="drawer_item_slideshow">Slideshow</string>
    <string name="EMPTY_MSG">Enter your message</string>
    <string name="MSG_IS_TOO_LONG">Maximum message length: </string>
    <string name="greeting">Welcome back, </string>
    <string name="login_fail">Login Failed. Please Try Again.</string>
    <string name="sign_out_msg">You signed out of the account.</string>
    <string name="invitation_message">Please join me for a balancechat: https://bit.ly/2JJlIba</string>
    <string name="invitation_title">Balance Invite</string>
    <string name="waiting_for_loading">Load in progress…</string>
    <string name="user_picture">User Picture</string>
    <string name="drawer_item_signout">Sign out</string>
    <string name="noname">Name</string>
    <string name="account">Account</string>
    <string name="privacy_policy">https://superapp.example.com/privacy-policy.html</string>
    <string name="terms_of_service">https://superapp.example.com/terms-of-service.html</string>
    <string name="set_settings">Set</string>
    <string name="PASS_IS_TOO_SHORT">Min pass length:</string>
    <string name="UPDATED">Updated</string>
    <string name="drawer_item_about">About Us</string>
    <string name="drawer_item_feedback">Report Bug</string>

</resources>
