<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_action_account"
            android:title="@string/drawer_item_contact" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/drawer_item_invitation" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_action_signout"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
